--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 TELEGRAM_TOKEN=7678520653:AAGuP6aoh_blL-RgimromTyuKgHcAB589pY
 CHROME_DRIVER_PATH=C:\Program Files\Google\chromedriver.exe
-TESSERACT_PATH=C:\Program Files\Tesseract-OCR\tesseract.exe
+TESSERACT_PATH=/usr/bin/tesseract
+
