Update Tesseract path for Linux2

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 TELEGRAM_TOKEN=7678520653:AAGuP6aoh_blL-RgimromTyuKgHcAB589pY
-CHROME_DRIVER_PATH=C:\Program Files\Google\chromedriver.exe
+CHROME_DRIVER_PATH = "chromedriver"
 TESSERACT_PATH=/usr/bin/tesseract
 
