--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,34 @@
-python-telegram-bot>=20.0
-selenium>=4.0
-python-dotenv
-apscheduler>=3.9
+anyio==4.9.0
+APScheduler==3.11.0
+attrs==25.3.0
+beautifulsoup4==4.13.4
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+greenlet==3.2.1
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+outcome==1.3.0.post0
+packaging==25.0
+pillow==11.2.1
+pycparser==2.22
+PySocks==1.7.1
+pytesseract==0.3.13
+python-dotenv==1.1.0
+python-telegram-bot==22.0
+requests==2.32.3
+selenium==4.32.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.7
+SQLAlchemy==2.0.40
+trio==0.30.0
+trio-websocket==0.12.2
+typing_extensions==4.13.2
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.4.0
+websocket-client==1.8.0
+wsproto==1.2.0
